src/test/ui/derives/deriving-meta-unknown-trait.stderr
error: cannot find derive macro `Eqr` in this scope
  --> $DIR/deriving-meta-unknown-trait.rs:1:10
   |
LL | #[derive(Eqr)]
   |          ^^^ help: did you mean `Eq`? (a similarly named derive macro)
   |
  ::: $SRC_DIR/core/src/cmp.rs:LL:COL
   |
LL | pub macro Eq($item:item) {
   | ------------------------ similarly named derive macro `Eq` defined here

error: cannot find derive macro `Eqr` in this scope
  --> $DIR/deriving-meta-unknown-trait.rs:1:10
   |
LL | #[derive(Eqr)]
   |          ^^^ help: did you mean `Eq`? (a similarly named derive macro)
   |
  ::: $SRC_DIR/core/src/cmp.rs:LL:COL
   |
LL | pub macro Eq($item:item) {
   | ------------------------ similarly named derive macro `Eq` defined here

error: aborting due to 2 previous errors

